--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Hello!
 My project is a programm that checkes all the websites from the table given every 10 minutes.
 It is written with consideration of all the conditions and points given in the task.
 P.s.: Comments in the code are English not as to the fact that the code is stolen (it is actuall not). It was just more convenient to use this language ;).
+
+Manager_Final - main file
